lab2/Code/syntax.output
State 29 conflicts: 1 shift/reduce
State 33 conflicts: 1 shift/reduce
State 57 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec SEMI
    8       | Specifier error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag
   15                | error

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | ID LP error RP
   24       | error LP VarList RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC
   29       | error RC

   30 StmtList: Stmt StmtList
   31         | %empty

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | WHILE LP Exp RP Stmt
   38     | error SEMI

   39 DefList: Def DefList
   40        | %empty

   41 Def: Specifier DecList SEMI
   42    | Specifier error SEMI

   43 DecList: Dec
   44        | Dec COMMA DecList

   45 Dec: VarDec
   46    | VarDec ASSIGNOP Exp

   47 Exp: Exp ASSIGNOP Exp
   48    | Exp AND Exp
   49    | Exp OR Exp
   50    | Exp RELOP Exp
   51    | Exp PLUS Exp
   52    | Exp MINUS Exp
   53    | Exp STAR Exp
   54    | Exp DIV Exp
   55    | LP Exp RP
   56    | MINUS Exp
   57    | NOT Exp
   58    | ID LP Args RP
   59    | ID LP RP
   60    | Exp LB Exp RB
   61    | Exp DOT ID
   62    | ID
   63    | INT
   64    | FLOAT
   65    | error

   66 Args: Exp COMMA Args
   67     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 15 23 24 29 38 42 65
    INT (258) 20 63
    FLOAT (259) 64
    ID (260) 16 18 19 21 22 23 58 59 61 62
    SEMI (261) 4 5 7 8 32 34 38 41 42
    COMMA (262) 10 25 44 66
    ASSIGNOP (263) 46 47
    RELOP (264) 50
    PLUS (265) 51
    MINUS (266) 52 56
    STAR (267) 53
    DIV (268) 54
    AND (269) 48
    OR (270) 49
    DOT (271) 61
    NOT (272) 57
    TYPE (273) 11
    LP (274) 21 22 23 24 35 36 37 55 58 59
    RP (275) 21 22 23 24 35 36 37 55 58 59
    LB (276) 20 60
    RB (277) 20 60
    LC (278) 13 28
    RC (279) 13 28 29
    STRUCT (280) 13 14
    RETURN (281) 34
    IF (282) 35 36
    ELSE (283) 36
    WHILE (284) 37
    NEG (285)
    LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program (33)
        on left: 1
        on right: 0
    ExtDefList (34)
        on left: 2 3
        on right: 1 2
    ExtDef (35)
        on left: 4 5 6 7 8
        on right: 2
    ExtDecList (36)
        on left: 9 10
        on right: 4 10
    Specifier (37)
        on left: 11 12
        on right: 4 5 6 7 8 27 41 42
    StructSpecifier (38)
        on left: 13 14 15
        on right: 12
    OptTag (39)
        on left: 16 17
        on right: 13
    Tag (40)
        on left: 18
        on right: 14
    VarDec (41)
        on left: 19 20
        on right: 9 10 20 27 45 46
    FunDec (42)
        on left: 21 22 23 24
        on right: 6 7
    VarList (43)
        on left: 25 26
        on right: 21 24 25
    ParamDec (44)
        on left: 27
        on right: 25 26
    CompSt (45)
        on left: 28 29
        on right: 6 33
    StmtList (46)
        on left: 30 31
        on right: 28 30
    Stmt (47)
        on left: 32 33 34 35 36 37 38
        on right: 30 35 36 37
    DefList (48)
        on left: 39 40
        on right: 13 28 39
    Def (49)
        on left: 41 42
        on right: 39
    DecList (50)
        on left: 43 44
        on right: 41 44
    Dec (51)
        on left: 45 46
        on right: 43 44
    Exp (52)
        on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
        on right: 32 34 35 36 37 46 47 48 49 50 51 52 53 54 55 56 57 60 61 66 67
    Args (53)
        on left: 66 67
        on right: 58 66


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

   15 StructSpecifier: error .

    $default  reduce using rule 15 (StructSpecifier)


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag

    ID  shift, and go to state 9

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 10
    Tag     go to state 11


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 12


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec SEMI
    8       | Specifier . error SEMI

    error  shift, and go to state 14
    ID     shift, and go to state 15
    SEMI   shift, and go to state 16

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 10

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 20


State 11

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 12

    0 $accept: Program $end .

    $default  accept


State 13

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 14

    8 ExtDef: Specifier error . SEMI
   24 FunDec: error . LP VarList RP

    SEMI  shift, and go to state 21
    LP    shift, and go to state 22


State 15

   19 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP
   23       | ID . LP error RP

    LP  shift, and go to state 23

    $default  reduce using rule 19 (VarDec)


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 18

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 9 (ExtDecList)


State 19

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . SEMI

    error  shift, and go to state 27
    SEMI   shift, and go to state 28
    LC     shift, and go to state 29

    CompSt  go to state 30


State 20

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 40 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 32
    Def              go to state 33


State 21

    8 ExtDef: Specifier error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 22

   24 FunDec: error LP . VarList RP

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 35
    ParamDec         go to state 36


State 23

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP
   23       | ID LP . error RP

    error   shift, and go to state 37
    TYPE    shift, and go to state 2
    RP      shift, and go to state 38
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 39
    ParamDec         go to state 36


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 40

    ExtDecList  go to state 41
    VarDec      go to state 18


State 26

   20 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 42


State 27

   29 CompSt: error . RC

    RC  shift, and go to state 43


State 28

    7 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 7 (ExtDef)


State 29

   28 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 40 (DefList)]
    INT     reduce using rule 40 (DefList)
    FLOAT   reduce using rule 40 (DefList)
    ID      reduce using rule 40 (DefList)
    MINUS   reduce using rule 40 (DefList)
    NOT     reduce using rule 40 (DefList)
    LP      reduce using rule 40 (DefList)
    LC      reduce using rule 40 (DefList)
    RC      reduce using rule 40 (DefList)
    RETURN  reduce using rule 40 (DefList)
    IF      reduce using rule 40 (DefList)
    WHILE   reduce using rule 40 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 44
    Def              go to state 33


State 30

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 31

   41 Def: Specifier . DecList SEMI
   42    | Specifier . error SEMI

    error  shift, and go to state 45
    ID     shift, and go to state 40

    VarDec   go to state 46
    DecList  go to state 47
    Dec      go to state 48


State 32

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 49


State 33

   39 DefList: Def . DefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 40 (DefList)]
    INT     reduce using rule 40 (DefList)
    FLOAT   reduce using rule 40 (DefList)
    ID      reduce using rule 40 (DefList)
    MINUS   reduce using rule 40 (DefList)
    NOT     reduce using rule 40 (DefList)
    LP      reduce using rule 40 (DefList)
    LC      reduce using rule 40 (DefList)
    RC      reduce using rule 40 (DefList)
    RETURN  reduce using rule 40 (DefList)
    IF      reduce using rule 40 (DefList)
    WHILE   reduce using rule 40 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 50
    Def              go to state 33


State 34

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 40

    VarDec  go to state 51


State 35

   24 FunDec: error LP VarList . RP

    RP  shift, and go to state 52


State 36

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .

    COMMA  shift, and go to state 53

    $default  reduce using rule 26 (VarList)


State 37

   15 StructSpecifier: error .
   23 FunDec: ID LP error . RP

    RP  shift, and go to state 54

    $default  reduce using rule 15 (StructSpecifier)


State 38

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 39

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 55


State 40

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 41

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 42

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 56


State 43

   29 CompSt: error RC .

    $default  reduce using rule 29 (CompSt)


State 44

   28 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 57
    INT     shift, and go to state 58
    FLOAT   shift, and go to state 59
    ID      shift, and go to state 60
    MINUS   shift, and go to state 61
    NOT     shift, and go to state 62
    LP      shift, and go to state 63
    LC      shift, and go to state 29
    RETURN  shift, and go to state 64
    IF      shift, and go to state 65
    WHILE   shift, and go to state 66

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 68
    Stmt      go to state 69
    Exp       go to state 70


State 45

   42 Def: Specifier error . SEMI

    SEMI  shift, and go to state 71


State 46

   20 VarDec: VarDec . LB INT RB
   45 Dec: VarDec .
   46    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 72
    LB        shift, and go to state 26

    $default  reduce using rule 45 (Dec)


State 47

   41 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 73


State 48

   43 DecList: Dec .
   44        | Dec . COMMA DecList

    COMMA  shift, and go to state 74

    $default  reduce using rule 43 (DecList)


State 49

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 50

   39 DefList: Def DefList .

    $default  reduce using rule 39 (DefList)


State 51

   20 VarDec: VarDec . LB INT RB
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 27 (ParamDec)


State 52

   24 FunDec: error LP VarList RP .

    $default  reduce using rule 24 (FunDec)


State 53

   25 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 75
    ParamDec         go to state 36


State 54

   23 FunDec: ID LP error RP .

    $default  reduce using rule 23 (FunDec)


State 55

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 56

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 57

   29 CompSt: error . RC
   38 Stmt: error . SEMI
   65 Exp: error .

    SEMI  shift, and go to state 76
    RC    shift, and go to state 43

    SEMI      [reduce using rule 65 (Exp)]
    $default  reduce using rule 65 (Exp)


State 58

   63 Exp: INT .

    $default  reduce using rule 63 (Exp)


State 59

   64 Exp: FLOAT .

    $default  reduce using rule 64 (Exp)


State 60

   58 Exp: ID . LP Args RP
   59    | ID . LP RP
   62    | ID .

    LP  shift, and go to state 77

    $default  reduce using rule 62 (Exp)


State 61

   56 Exp: MINUS . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 79


State 62

   57 Exp: NOT . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 80


State 63

   55 Exp: LP . Exp RP

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 81


State 64

   34 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 82


State 65

   35 Stmt: IF . LP Exp RP Stmt
   36     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 83


State 66

   37 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 84


State 67

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


State 68

   28 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 85


State 69

   30 StmtList: Stmt . StmtList

    error   shift, and go to state 57
    INT     shift, and go to state 58
    FLOAT   shift, and go to state 59
    ID      shift, and go to state 60
    MINUS   shift, and go to state 61
    NOT     shift, and go to state 62
    LP      shift, and go to state 63
    LC      shift, and go to state 29
    RETURN  shift, and go to state 64
    IF      shift, and go to state 65
    WHILE   shift, and go to state 66

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 86
    Stmt      go to state 69
    Exp       go to state 70


State 70

   32 Stmt: Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    SEMI      shift, and go to state 87
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    DOT       shift, and go to state 96
    LB        shift, and go to state 97


State 71

   42 Def: Specifier error SEMI .

    $default  reduce using rule 42 (Def)


State 72

   46 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 98


State 73

   41 Def: Specifier DecList SEMI .

    $default  reduce using rule 41 (Def)


State 74

   44 DecList: Dec COMMA . DecList

    ID  shift, and go to state 40

    VarDec   go to state 46
    DecList  go to state 99
    Dec      go to state 48


State 75

   25 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 25 (VarList)


State 76

   38 Stmt: error SEMI .

    $default  reduce using rule 38 (Stmt)


State 77

   58 Exp: ID LP . Args RP
   59    | ID LP . RP

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63
    RP     shift, and go to state 100

    Exp   go to state 101
    Args  go to state 102


State 78

   65 Exp: error .

    $default  reduce using rule 65 (Exp)


State 79

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   56    | MINUS Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    DOT  shift, and go to state 96
    LB   shift, and go to state 97

    $default  reduce using rule 56 (Exp)


State 80

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   57    | NOT Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    DOT  shift, and go to state 96
    LB   shift, and go to state 97

    $default  reduce using rule 57 (Exp)


State 81

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   55    | LP Exp . RP
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    DOT       shift, and go to state 96
    RP        shift, and go to state 103
    LB        shift, and go to state 97


State 82

   34 Stmt: RETURN Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    SEMI      shift, and go to state 104
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    DOT       shift, and go to state 96
    LB        shift, and go to state 97


State 83

   35 Stmt: IF LP . Exp RP Stmt
   36     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 105


State 84

   37 Stmt: WHILE LP . Exp RP Stmt

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 106


State 85

   28 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 28 (CompSt)


State 86

   30 StmtList: Stmt StmtList .

    $default  reduce using rule 30 (StmtList)


State 87

   32 Stmt: Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 88

   47 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 107


State 89

   50 Exp: Exp RELOP . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 108


State 90

   51 Exp: Exp PLUS . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 109


State 91

   52 Exp: Exp MINUS . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 110


State 92

   53 Exp: Exp STAR . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 111


State 93

   54 Exp: Exp DIV . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 112


State 94

   48 Exp: Exp AND . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 113


State 95

   49 Exp: Exp OR . Exp

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 114


State 96

   61 Exp: Exp DOT . ID

    ID  shift, and go to state 115


State 97

   60 Exp: Exp LB . Exp RB

    error  shift, and go to state 78
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  go to state 116


State 98

   46 Dec: VarDec ASSIGNOP Exp .
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    DOT       shift, and go to state 96
    LB        shift, and go to state 97

    $default  reduce using rule 46 (Dec)


State 99

   44 DecList: Dec COMMA DecList .

    $default  reduce using rule 44 (DecList)


State 100

   59 Exp: ID LP RP .

    $default  reduce using rule 59 (Exp)


State 101

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66 Args: Exp . COMMA Args
   67     | Exp .

    COMMA     shift, and go to state 117
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    DOT       shift, and go to state 96
    LB        shift, and go to state 97

    $default  reduce using rule 67 (Args)


State 102

   58 Exp: ID LP Args . RP

    RP  shift, and go to state 118


State 103

   55 Exp: LP Exp RP .

    $default  reduce using rule 55 (Exp)


State 104

   34 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 34 (Stmt)


State 105

   35 Stmt: IF LP Exp . RP Stmt
   36     | IF LP Exp . RP Stmt ELSE Stmt
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    DOT       shift, and go to state 96
    RP        shift, and go to state 119
    LB        shift, and go to state 97


State 106

   37 Stmt: WHILE LP Exp . RP Stmt
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    DOT       shift, and go to state 96
    RP        shift, and go to state 120
    LB        shift, and go to state 97


State 107

   47 Exp: Exp . ASSIGNOP Exp
   47    | Exp ASSIGNOP Exp .
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    STAR      shift, and go to state 92
    DIV       shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    DOT       shift, and go to state 96
    LB        shift, and go to state 97

    $default  reduce using rule 47 (Exp)


State 108

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   50    | Exp RELOP Exp .
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    PLUS   shift, and go to state 90
    MINUS  shift, and go to state 91
    STAR   shift, and go to state 92
    DIV    shift, and go to state 93
    DOT    shift, and go to state 96
    LB     shift, and go to state 97

    $default  reduce using rule 50 (Exp)


State 109

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   51    | Exp PLUS Exp .
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    STAR  shift, and go to state 92
    DIV   shift, and go to state 93
    DOT   shift, and go to state 96
    LB    shift, and go to state 97

    $default  reduce using rule 51 (Exp)


State 110

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   52    | Exp MINUS Exp .
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    STAR  shift, and go to state 92
    DIV   shift, and go to state 93
    DOT   shift, and go to state 96
    LB    shift, and go to state 97

    $default  reduce using rule 52 (Exp)


State 111
